<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="#000000"

        android:textSize="22sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:textSize="25sp"
        android:background="@drawable/shape"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:autofillHints="name"
        android:padding="12dp"


        />
    <EditText
        android:id="@+id/F_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:textSize="25sp"
        android:background="@drawable/shape"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:hint="@string/F_name"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:autofillHints="name"
        android:padding="12dp"

        />
    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:textSize="25sp"
        android:background="@drawable/shape"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:hint="@string/dob"
        android:textColorHint="@color/black"
        android:inputType="date"
        android:autofillHints="name"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/RN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:textSize="25sp"
        android:background="@drawable/shape"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:hint="@string/RN"
        android:textColorHint="@color/black"
        android:inputType="textCapSentences"
        android:autofillHints="name"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:textSize="25sp"
        android:background="@drawable/shape"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        android:hint="@string/Email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="12dp"
        />


    <RadioGroup
        android:id="@+id/rdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="540dp"

        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:padding="5sp"
            android:text="@string/A"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="visible" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:padding="5sp"
            android:text="@string/B"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="690dp"
        android:background="@drawable/shape"
        android:padding="20dp"
        android:text="@string/Submit"
        android:textColor="@color/black"
        android:textSize="25sp"
        />


</RelativeLayout>